fix: home comp  z-index  for thread wrapper avoiding to see download img from routeroutlet underneath

--- a/src/app/post-login/home/home.component.scss
+++ b/src/app/post-login/home/home.component.scss
@@ -86,6 +86,7 @@
     background-color: $white;
     height: calc(100svh - 148px);
     box-sizing: border-box;
+    z-index: 6;
   }
 }
 
